# linelogic

./: .env.example  .gitignore  .pre-commit-config.yaml  AUTOMATED_SETUP.md  CODEOWNERS  CONTRIBUTING.md  DASHBOARD_CLEANUP.md  DEPLOYMENT_READY.md  DEPLOYMENT_SUMMARY.md  FINAL_LAUNCH_CHECKLIST.md  JAN_10_TEST_RESULTS.md  LEGAL_COMPLIANCE.md  LICENSE  MODEL_TRAINING_COMPLETE.md  Makefile  OPERATIONS_RUNBOOK.md  POC_DEPLOYMENT_PACKAGE.md  README.md  README_AUTOMATED.md  SECURITY.md  TABLE_DESIGN_DETAILS.md  TRAINING_COMPLETE_SUMMARY.md  TRAINING_READY.md  TRAIN_QUICK_START.md  UI_UX_REDESIGN_SUMMARY.md  VALIDATION_FRAMEWORK.md  future-work.md  predictions_log.csv  pyproject.toml  streamlit_app.py  streamlit_app_enhanced.py  test_live.csv  test_predictions_final.csv
.github/workflows/: ci.yml  daily-job.yml  weekly-summary.yml
.linelogic/: games_cache.csv  linelogic.db  nba_model_v1.0.0.pkl  nba_model_v1.0.0_metadata.json  player_stats_cache.csv  players_advanced_metrics.csv  team_season_avgs.csv
.streamlit/: config.toml
adr/: 0003_provider_injection.md
app/: app.py  app_enhanced.py
config/: ingest.yaml
docs/: 01_vision.md  02_sports_strategy.md  03_math_foundations.md  04_data_sources.md  05_backtesting_and_paper_trading.md  09_lines_and_markets.md  10_daily_scheduler.md  12_email_setup.md  13_modeling_strategy.md  15_dev_workflow.md  16_player_features_and_sources.md  19_mlops_architecture.md  README.md  cleanup_plan.md
docs/archive/: 04_data_sources_old.md  STREAMLIT_REFRESH_INSTRUCTIONS.md
docs/decisions/: 0001_architecture.md  ADR_TEMPLATE.md
docs/research/: 08_data_learning_plan.md
docs/specs/: README.md
docs/specs/architecture/: 20_architecture_principles.md
docs/specs/backtesting/: 05_backtesting_and_paper_trading.md
docs/specs/compliance/: 06_risks_and_compliance.md
docs/specs/data/: INGESTION_PERSISTENCE_DESIGN.md
docs/specs/deployment/: DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_INDEX.md  DEPLOYMENT_READY.md  DEPLOYMENT_SUMMARY.md  FINAL_LAUNCH_CHECKLIST.md  OPERATIONS_RUNBOOK.md  POC_DEPLOYMENT_PACKAGE.md  QUICK_REFERENCE.md  VALIDATION_FRAMEWORK.md
docs/specs/mlops/: 17_mlflow_tracking.md  19_mlops_architecture.md  MLOPS_IMPLEMENTATION.md  MLOPS_QUICK_REFERENCE.md
docs/status/: EMAIL_SETUP_COMPLETE.md
feature_store/: README.md  feature_store.yaml  features.py
scripts/: analyze_segmentation.py  build_player_stats_cache.py  check_root_markdown.py  clean_old_test_data.py  clear_stub_data.py  daily_linelogic.sh  dashboard_refresh_guide.sh  eval_jan10.py  generate_synthetic_games.py  infer_daily.py  linelogic-job.sh  send_daily_email.py  send_weekly_email.py  test_live_inference.py  test_manual_inference_2026_01_10.py  test_pipeline_jan10.py  train_model.py  train_offline.py  validate_predictions.py
src/linelogic/: __init__.py  email_router.py  email_sender.py  email_smtp.py  logging_config.py
tests/: __init__.py  test_ab_router.py  test_cache.py  test_cli.py  test_contracts.py  test_elo.py  test_eval.py  test_odds.py  test_portfolio.py  test_providers.py  test_rate_limit.py  test_storage.py
tests/test_ingest/: test_bronze_writer.py  test_paths.py  test_run.py
(+60 files in other folders)
